website/versioned_docs/version-2.0.0-alpha.11/node-client.md
---
id: version-2.0.0-alpha.11-node-client
title: node-client package
hide_title: true
original_id: node-client
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->


## node-client package

## Classes

|  Class | Description |
|  --- | --- |
|  [AuthContainer](./node-client.authcontainer.md) |  |
|  [BaseAPIClient](./node-client.baseapiclient.md) |  |
|  [Container](./node-client.container.md) |  |
|  [GlobalJSONContainerStorage](./node-client.globaljsoncontainerstorage.md) |  |
|  [MemoryStorageDriver](./node-client.memorystoragedriver.md) |  |
|  [NodeAPIClient](./node-client.nodeapiclient.md) |  |
|  [NodeContainer](./node-client.nodecontainer.md) |  |
|  [NodeExtraSessionInfoProvider](./node-client.nodeextrasessioninfoprovider.md) |  |
|  [SkygearError](./node-client.skygearerror.md) |  |

## Functions

|  Function | Description |
|  --- | --- |
|  [decodeAuthResponse(r)](./node-client.decodeauthresponse.md) |  |
|  [decodeError(err)](./node-client.decodeerror.md) |  |
|  [decodeIdentity(i)](./node-client.decodeidentity.md) |  |
|  [decodeSession(s)](./node-client.decodesession.md) |  |
|  [decodeUser(u)](./node-client.decodeuser.md) |  |
|  [encodeIdentity(i)](./node-client.encodeidentity.md) |  |
|  [encodeQuery(query)](./node-client.encodequery.md) |  |
|  [encodeQueryComponent(s)](./node-client.encodequerycomponent.md) |  |
|  [encodeUser(u)](./node-client.encodeuser.md) |  |

## Interfaces

|  Interface | Description |
|  --- | --- |
|  [AuthResponse](./node-client.authresponse.md) |  |
|  [ContainerOptions](./node-client.containeroptions.md) |  |
|  [ContainerStorage](./node-client.containerstorage.md) |  |
|  [CustomTokenIdentity](./node-client.customtokenidentity.md) |  |
|  [ExtraSessionInfoOptions](./node-client.extrasessioninfooptions.md) |  |
|  [ExtraSessionInfoProvider](./node-client.extrasessioninfoprovider.md) |  |
|  [JSONArray](./node-client.jsonarray.md) |  |
|  [JSONObject](./node-client.jsonobject.md) |  |
|  [OAuthIdentity](./node-client.oauthidentity.md) |  |
|  [OAuthWebPopupAuthorizationURLOptions](./node-client.oauthwebpopupauthorizationurloptions.md) |  |
|  [OAuthWebRedirectAuthorizationURLOptions](./node-client.oauthwebredirectauthorizationurloptions.md) |  |
|  [PasswordIdentity](./node-client.passwordidentity.md) |  |
|  [Session](./node-client.session.md) |  |
|  [SessionUserAgent](./node-client.sessionuseragent.md) |  |
|  [SSOLoginOptions](./node-client.ssologinoptions.md) |  |
|  [StorageDriver](./node-client.storagedriver.md) |  |
|  [User](./node-client.user.md) |  |

## Variables

|  Variable | Description |
|  --- | --- |
|  [defaultContainer](./node-client.defaultcontainer.md) |  |
|  [VERSION](./node-client.version.md) |  |

## Type Aliases

|  Type Alias | Description |
|  --- | --- |
|  [Identity](./node-client.identity.md) |  |
|  [JSONValue](./node-client.jsonvalue.md) |  |
|  [OAuthAuthorizationURLOptions](./node-client.oauthauthorizationurloptions.md) |  |
|  [SkygearErrorName](./node-client.skygearerrorname.md) |  |

